# logic48-plc-tag-checker

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
examples/: invalid_tags.csv  valid_tags.csv
src/plc_tag_checker/: __init__.py  checker.py  cli.py  report.py
tests/: test_checker.py
