[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logic48-plc-tag-checker"
version = "0.1.0"
description = "A lightweight CLI tool for validating PLC/HMI/SCADA tag lists."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yuriy / Logic48" }
]
keywords = [
    "plc",
    "hmi",
    "scada",
    "industrial-automation",
    "tag-list",
    "engineering-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
plc-tag-checker = "plc_tag_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
